docs/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aidocs-deployment
  namespace: aidocs
spec:
  replicas: 2  # Run 2 copies
  selector:
    matchLabels:
      app: aidocs
  template:
    metadata:
      labels:
        app: aidocs
    spec:
      containers:
      - name: aidocs
        image: aidocs:v1
        ports:
        - containerPort: 80
